--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
     "express-jwt": "^6.1.1",
     "jsonwebtoken": "^8.5.1",
@@ -15,7 +16,9 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "mapbox-gl": "^2.7.0"
+
   },
   "scripts": {
     "start-client": "react-scripts start",
